fix scroll work on mobile

--- a/src/common/common.scss
+++ b/src/common/common.scss
@@ -1,3 +1,9 @@
+//Toast Open
+body.no-scroll{
+  overflow: hidden;
+  position: relative;
+}
+
 //Custom scss
 main{
   background-color:$white;
@@ -58,3 +64,4 @@ nav{
   }
 }
 //#endregion
+
